# SimUniv

./: .gitignore  CMakeLists.txt  a.out  main.cpp
.ccls-cache/@@home@ploruto@coding@cpp@socialWorld/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@9@array.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@functexcept.h.blob  @usr@include@c++@9@bits@functional_hash.h.blob  @usr@include@c++@9@bits@hash_bytes.h.blob  @usr@include@c++@9@bits@ios_base.h.blob  @usr@include@c++@9@bits@istream.tcc.blob  @usr@include@c++@9@bits@locale_classes.h.blob  @usr@include@c++@9@bits@locale_classes.tcc.blob  @usr@include@c++@9@bits@locale_facets.h.blob  @usr@include@c++@9@bits@locale_facets.tcc.blob  @usr@include@c++@9@bits@localefwd.h.blob  @usr@include@c++@9@bits@memoryfwd.h.blob  @usr@include@c++@9@bits@move.h.blob  @usr@include@c++@9@bits@ostream.tcc.blob  (+142 more)
(+29 files in other folders)
